--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,6 +16,10 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    form:
+        csrf_protection:
+            enabled: false
+            field_name: 'custom_token_name'
 
 when@test:
     framework:
