--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,7 +21,7 @@ security:
                 #- App\Security\LoginAuthenticator
 
             logout:
-                path: app_logout
+                path: logout
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -33,6 +33,11 @@ security:
                 # login form, uncomment the following line to always enable it.
                 #always_remember_me: true
 
+            json_login:
+                # api_login is a route we will create below
+                check_path: login
+                username_path: email # Указывает поле, где искать имя пользователя
+                password_path: password
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
